--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>jp.haruserver.mc</groupId>
-  <artifactId>HCGradingSupport</artifactId>
-  <version>1.1.0</version>
- <repositories>
-  <repository>
-   <id>spigot-repo</id>
-   <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-  </repository>
-  <repository>
-   <id>jitpack.io</id>
-   <url>https://jitpack.io</url>
-  </repository>
- </repositories>
- <dependencies>
-  <dependency>
-   <groupId>org.spigotmc</groupId>
-   <artifactId>spigot-api</artifactId>
-    <version>1.21-R0.1-SNAPSHOT</version>
-   <scope>provided</scope>
-  </dependency>
-  <dependency>
-    <groupId>com.github.MilkBowl</groupId>
-    <artifactId>VaultAPI</artifactId>
-    <version>1.7</version>
-    <scope>provided</scope>
-  </dependency>
- </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>jp.haruserver.mc</groupId>
+    <artifactId>HCGradingSupport</artifactId>
+    <version>1.1.1</version>
+
+    <build>
+        <plugins>
+            <!-- Javaコンパイル -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.21.5-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+        </dependency>
+    </dependencies>
 </project>
